--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,14 @@ a {
     color: #006380;
 }
 
+a:hover {
+    color: #ec580f;
+}
+
+a:hover, a:visited, a:link, a:active {
+    text-decoration: none;
+}
+
 .container {
     margin-top: 10vmax;
     margin-bottom: 10vmax;
