Only wells with links should be hoverable

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ a:hover, a:visited, a:link, a:active {
     height: 300px;
 }
 
-.well:hover {
+a > .well:hover {
     background-color: lightgrey;
 }
 
