--- a/css/style.css
+++ b/css/style.css
@@ -131,5 +131,10 @@ a > .well:hover {
 }
 
 .impressum {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.footer table {
+    line-height: 120%;
+    margin-bottom: 20px;
 }
