--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ a > .portrait-well:hover {
 }
 
 .footer td {
-    vertical-align: top;
+    vertical-align: center;
     padding-right: 10px;
 }
 
